src/objects/GPM_Project__c.object
<CustomObject>
    <description>This is the primary object in the Project Central app; it is used to capture information about GSA projects.  The current build primarily supports app development as well as the needs of the PMO office.</description>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <description>Project Accomplishments</description>
        <inlineHelpText>The &quot;Latest Project Updates&quot; section read-only
 and only allow users to update those fields from the &quot;New Pulse&quot; quick action button or &apos;New Pulse&quot; from related list.</inlineHelpText>
        <label>Accomplishments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <inlineHelpText>Use this field upon project completion to input the date that the project actually ends.</inlineHelpText>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <inlineHelpText>Use this field upon project initiation to input the date that the project actually starts.  This date should remain unchanged once it is entered.</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Spent_Rollup__c</fullName>
        <inlineHelpText>This is an auto-calculated field. Total Budget Amount Spent is the sum of all Project Spending entries.</inlineHelpText>
        <label>Total Budget Amount Spent</label>
        <summarizedField>Project_Spending__c.Amount_Spent__c</summarizedField>
        <summaryForeignKey>Project_Spending__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annualized_Savings__c</fullName>
        <description>Captures Annual Savings on a Project</description>
        <inlineHelpText>This is a currency field to track the ROI that this project is intended to return or has returned.</inlineHelpText>
        <label>Annualized Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Label__c</fullName>
        <description>Full Application Name as defined in the Salesforce.com App Picker:

ex. Office of Civil Rights;
ex. FDCCI;
ex. FTRD;
ex. Project Central;</description>
        <inlineHelpText>Full Application Name as defined in the Salesforce.com App Picker:

ex. Office of Civil Rights;
ex. FDCCI;
ex. FTRD;
ex. Project Central;</inlineHelpText>
        <label>App Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationText__c</fullName>
        <inlineHelpText>Enter the application name pertaining to this project</inlineHelpText>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Module</label>
        <referenceTo>Application_Support__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <description>Renamed Assumptions to Assumptions and Constraints for PC Phase 2</description>
        <inlineHelpText>Use this field to document assumptions and constraints related to the anticipated project outcomes.</inlineHelpText>
        <label>Assumptions and Constraints</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Description__c</fullName>
        <inlineHelpText>Use this field to provide additional details that could not be specified in the other budget-related fields.</inlineHelpText>
        <label>Budget Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Budgeted_Amount__c</fullName>
        <inlineHelpText>This is a manually entered field. Use this field to enter the budget that has been allocated to the total project.</inlineHelpText>
        <label>Total Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <inlineHelpText>Considerations for Complexity: 
-Schedule: Flexible vs. Aggressive 
-User Support: Strong vs. Scarce 
-Requirements: Basic / Finalized vs. Complex / Changing 
-Org. Impact: Isolated vs. Multiple Inter-dependencies</inlineHelpText>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConvertedFromRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines whether or not this project was converted from a request.</inlineHelpText>
        <label>Converted From Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Status_Flag__c</fullName>
        <formula>IMAGE( 
CASE( Cost_Status__c , 
&quot;Red&quot;, &quot;/resource/RedFlag&quot;, 
&quot;Yellow&quot;, &quot;/resource/YellowFlag&quot;, 
&quot;Green&quot;, &quot;/resource/GreenFlag&quot;,&quot;/s.gif&quot;), 
CASE( Cost_Status__c, 
&quot;Red&quot;, &quot;Red&quot;, 
&quot;Yellow&quot;, &quot;Yellow&quot;, 
&quot;Green&quot;, &quot;Green&quot;,&quot;Cost Health Flag&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Health Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Status__c</fullName>
        <description>Label changed to health from status for PC i4</description>
        <inlineHelpText>Use this field to indicate the overall cost status for this project</inlineHelpText>
        <label>Cost Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <description>Calculates the Days Remaining for Project Completion</description>
        <formula>IF(NOT(ISPICKVAL( Status__c , &apos;Closed&apos;)),(Estimated_End_Date__c) - TODAY(), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is auto-calculated. Days Remaining is the difference between today&apos;s date and the Estimated End Date. This field will not be calculated when the Project Phase is &quot;Closed&quot;.</inlineHelpText>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Closed__c</fullName>
        <formula>Today()-Actual_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_of_Annualized_Savings__c</fullName>
        <description>Captures the description of Annual Savings on a Project.</description>
        <inlineHelpText>Use this field to add a description or details in regards to anticipated annual savings that this project is expected to produce.</inlineHelpText>
        <label>Description of Annualized Savings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Dependent picklist to the Office/Portfolio Field.</description>
        <inlineHelpText>Use this field to select the Division that is managing the project.</inlineHelpText>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Office_Portfolio__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Application Systems Development Division</fullName>
                </value>
                <value>
                    <fullName>BAF - Staff Support Division</fullName>
                </value>
                <value>
                    <fullName>BAI - Information Technology Division</fullName>
                </value>
                <value>
                    <fullName>BAS - Resource Management Division</fullName>
                </value>
                <value>
                    <fullName>BBA - Appropriated Accounts Budget Division</fullName>
                </value>
                <value>
                    <fullName>BBB - Budget Formulation Division</fullName>
                </value>
                <value>
                    <fullName>BBC - Budget Control, Oversight, and Formulation Division</fullName>
                </value>
                <value>
                    <fullName>BBF - FAS Budget Division</fullName>
                </value>
                <value>
                    <fullName>BBI - Strategic Planning &amp; Performance Measurement Division</fullName>
                </value>
                <value>
                    <fullName>BBO - Budget Control &amp; Oversight Division</fullName>
                </value>
                <value>
                    <fullName>BBP - PBS Budget Division</fullName>
                </value>
                <value>
                    <fullName>BBS - Staff Accounts Division</fullName>
                </value>
                <value>
                    <fullName>BBT - TTS Budget Division</fullName>
                </value>
                <value>
                    <fullName>BBW - WCF Budget Division</fullName>
                </value>
                <value>
                    <fullName>BCA - Financial Policy &amp; Operations Division</fullName>
                </value>
                <value>
                    <fullName>BCB - Internal Control Division</fullName>
                </value>
                <value>
                    <fullName>BCC - Financial Reporting Division</fullName>
                </value>
                <value>
                    <fullName>BCE - Financial &amp; Payroll Services Division</fullName>
                </value>
                <value>
                    <fullName>BCF - Financial Services Division</fullName>
                </value>
                <value>
                    <fullName>BCP - PBS Financial Operations Division</fullName>
                </value>
                <value>
                    <fullName>BGA - Accounting and Financial Reporting Division</fullName>
                </value>
                <value>
                    <fullName>BGC - Consolidated Financial Services Division</fullName>
                </value>
                <value>
                    <fullName>BGF - FAS Financial Services Division</fullName>
                </value>
                <value>
                    <fullName>BGI - Internal Controls Division</fullName>
                </value>
                <value>
                    <fullName>BGN - Financial Policy Division</fullName>
                </value>
                <value>
                    <fullName>BGP - PBS Financial Services Division</fullName>
                </value>
                <value>
                    <fullName>BIA - Financial Information Management Division</fullName>
                </value>
                <value>
                    <fullName>BIB - Analytics &amp; Enterprise Reporting Division</fullName>
                </value>
                <value>
                    <fullName>BIC - Data Delivery and Management Division</fullName>
                </value>
                <value>
                    <fullName>BID - PBS Analytics Division</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EA_Functional_Area_OMB_Report_Bucket__c</fullName>
        <description>Renamed in PC i4</description>
        <inlineHelpText>These are the EA Functional Areas from the OCIO Strategic Plan / ZBB Process and used for OMB Reporting.</inlineHelpText>
        <label>GSA BRM Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Adjudicate Non-Judicial Requests</fullName>
                </value>
                <value>
                    <fullName>Assistive Technology Services</fullName>
                </value>
                <value>
                    <fullName>Budget Formulation</fullName>
                </value>
                <value>
                    <fullName>Business Analytics</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Certification and Accreditation</fullName>
                </value>
                <value>
                    <fullName>Credential Issuance and Management</fullName>
                </value>
                <value>
                    <fullName>Customer Services</fullName>
                </value>
                <value>
                    <fullName>Disaster Preparedness and Planning</fullName>
                </value>
                <value>
                    <fullName>Employee Benefits and Compensation</fullName>
                </value>
                <value>
                    <fullName>Employee Development and Training</fullName>
                </value>
                <value>
                    <fullName>Enterprise Architecture</fullName>
                </value>
                <value>
                    <fullName>Facilities, Fleet and Equip Mgmt</fullName>
                </value>
                <value>
                    <fullName>Federal Asset Sales</fullName>
                </value>
                <value>
                    <fullName>Goods and Services Acquisition</fullName>
                </value>
                <value>
                    <fullName>Identification and Authentication</fullName>
                </value>
                <value>
                    <fullName>Info Mapping / Taxonomy / Categorization</fullName>
                </value>
                <value>
                    <fullName>Inspection and Auditing</fullName>
                </value>
                <value>
                    <fullName>Inventory Control</fullName>
                </value>
                <value>
                    <fullName>IT System Dev / Integration Support</fullName>
                </value>
                <value>
                    <fullName>Knowledge Distribution and Delivery</fullName>
                </value>
                <value>
                    <fullName>Logistics Management</fullName>
                </value>
                <value>
                    <fullName>Mapping / Geospatial</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Portfolio Management</fullName>
                </value>
                <value>
                    <fullName>Program / Project Management</fullName>
                </value>
                <value>
                    <fullName>Provide and Maintain IT Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Regulatory Enforcement</fullName>
                </value>
                <value>
                    <fullName>Reporting and Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_End_Date__c</fullName>
        <inlineHelpText>Use this field throughout the project life cycle if the estimated end date has changes. This is auto-calculated based on the planned dates and entry of the Actual Start Date, but can be manually adjusted as necessary.</inlineHelpText>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Executive in charge;  generally GS-15 supervisor of App Owner</description>
        <inlineHelpText>Use this field to select the Executive in charge of the project. This is generally a GS-15 supervisor (or higher) or Application Owner.</inlineHelpText>
        <label>Executive Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Executive Sponsor)</relationshipLabel>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FY_Budget_Amount_Spent__c</fullName>
        <inlineHelpText>This is an auto-calculated field. FY Budget Amount Spent is the sum of all Project Spending entries that have been entered for the current fiscal year.</inlineHelpText>
        <label>FY Budget Amount Spent</label>
        <summarizedField>Project_Spending__c.Amount_Spent__c</summarizedField>
        <summaryFilterItems>
            <field>Project_Spending__c.FY__c</field>
            <operation>equals</operation>
            <value>FY16</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Spending__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FY_Budget_Amount__c</fullName>
        <inlineHelpText>This is a manually entered field. Use this field to enter the budget that has been allocated to the project for the current fiscal year.</inlineHelpText>
        <label>FY Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Percent_Complete__c</fullName>
        <inlineHelpText>Use this field to enter the percent of the project schedule that has been completed for the current fiscal year (Note: This may or may not be different from the Total Percent Complete field depending on the total length of the project).</inlineHelpText>
        <label>FY Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FY_Remaining_Budget__c</fullName>
        <formula>FY_Budget_Amount__c -  FY_Budget_Amount_Spent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an auto-calculated field. FY Remaining Budget is the difference between &quot;FY Budget Amount&quot; and &quot;FY Budget Amount Spent&quot;.</inlineHelpText>
        <label>FY Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_of_Budget_Amount_Spent__c</fullName>
        <formula>value(If(FY_Budget_Amount__c&lt;=0, &quot;0&quot;,

text(FY_Budget_Amount_Spent__c  /  FY_Budget_Amount__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an auto-calculated field. FY % Total Budget Amount Spent calculates the percentage of the budget that has been spent to date during the current fiscal year.</inlineHelpText>
        <label>FY % of Budget Amount Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GSA_Goals__c</fullName>
        <inlineHelpText>Use this field to select the agency-level goals that have been established by GSA.</inlineHelpText>
        <label>GSA Goals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Efficiency</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSA_Priorities__c</fullName>
        <inlineHelpText>Use this field to select the agency-level priorities that have been established by GSA.</inlineHelpText>
        <label>GSA Priorities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivering Better Value &amp; Savings</fullName>
                </value>
                <value>
                    <fullName>Serving Our Partners</fullName>
                </value>
                <value>
                    <fullName>Expanding Opptys for Small Businesses</fullName>
                </value>
                <value>
                    <fullName>Making a More Sustainable Government</fullName>
                </value>
                <value>
                    <fullName>Leading with Innovation</fullName>
                </value>
                <value>
                    <fullName>Building a Stronger GSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hidden_Status_change_date__c</fullName>
        <label>Hidden Status change date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investment_Type__c</fullName>
        <inlineHelpText>Use this field to specify the type of investment this project represents.</inlineHelpText>
        <label>Investment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Run</fullName>
                </value>
                <value>
                    <fullName>Grow</fullName>
                </value>
                <value>
                    <fullName>Transform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <description>Project Issues</description>
        <inlineHelpText>The &quot;Latest Project Updates&quot; section read-only
 and only allow users to update those fields from the &quot;New Pulse&quot; quick action button or &apos;New Pulse&quot; from related list.</inlineHelpText>
        <label>Issues</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines whether or not a project is one of the Key Projects</inlineHelpText>
        <label>Key Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>CO Users should select this field when data within a project is no longer relevant.</inlineHelpText>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Master Project Name for the Project Record</description>
        <inlineHelpText>Use this field to link child projects to their parent projects.</inlineHelpText>
        <label>Master Project</label>
        <referenceTo>GPM_Project__c</referenceTo>
        <relationshipLabel>Child Projects or Sprints</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Project Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCIO_Strategic_Initiative__c</fullName>
        <inlineHelpText>Use this field to select any addition key principles or strategic initiatives defined by your Service/Staff Office for this project.</inlineHelpText>
        <label>Key Principles / Initiatives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Service_Staff_Office__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Anytime, Anywhere, Any Device</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Below the Line</fullName>
                </value>
                <value>
                    <fullName>Back Office Modernization (BOM)</fullName>
                </value>
                <value>
                    <fullName>Information Management</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Mandate</fullName>
                </value>
                <value>
                    <fullName>Enterprise Transformation</fullName>
                </value>
                <value>
                    <fullName>Smart Building</fullName>
                </value>
                <value>
                    <fullName>FAS - Commodity Buy</fullName>
                </value>
                <value>
                    <fullName>FAS - FSSI</fullName>
                </value>
                <value>
                    <fullName>FAS - Modernize Acquisition Processes</fullName>
                </value>
                <value>
                    <fullName>FAS - Modernizing Schedules</fullName>
                </value>
                <value>
                    <fullName>FAS - OASIS</fullName>
                </value>
                <value>
                    <fullName>FAS - Supply Chain Modernization</fullName>
                </value>
                <value>
                    <fullName>FAS - Workplace Modernization</fullName>
                </value>
                <value>
                    <fullName>OCPO - 1800 F milestones are met</fullName>
                </value>
                <value>
                    <fullName>OCPO - Govt’s best at performance mgmt</fullName>
                </value>
                <value>
                    <fullName>OCPO - Learning org ready for future</fullName>
                </value>
                <value>
                    <fullName>OCPO - Workers enjoy new OTJ experiences</fullName>
                </value>
                <value>
                    <fullName>OCPO - LR helps deliver new workplace</fullName>
                </value>
                <value>
                    <fullName>OCPO - GSA turns to CPO 1st for HR needs</fullName>
                </value>
                <value>
                    <fullName>OCPO - An engaged workforce</fullName>
                </value>
                <value>
                    <fullName>OCPO - Customer Focused Service</fullName>
                </value>
                <value>
                    <fullName>SSO Shared Service Team Engagement</fullName>
                </value>
                <value>
                    <fullName>Cloud First</fullName>
                </value>
                <value>
                    <fullName>Open Source Software (OSS)</fullName>
                </value>
                <value>
                    <fullName>Enterprise Info &amp; Data Mgt Team (EIDM)</fullName>
                </value>
                <value>
                    <fullName>Digital Services</fullName>
                </value>
                <value>
                    <fullName>Records Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OMB_Reporting_Bucket__c</fullName>
        <label>OMB Reporting Bucket</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Infrastructure Management (IM)</fullName>
                </value>
                <value>
                    <fullName>Enterprise Applications Services (EA)</fullName>
                </value>
                <value>
                    <fullName>Security (S)</fullName>
                </value>
                <value>
                    <fullName>Enterprise Support Services (ES)</fullName>
                </value>
                <value>
                    <fullName>Planning and Governance (PG)</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_Portfolio__c</fullName>
        <inlineHelpText>Use this field to select the Office/Portfolio that is managing the project.</inlineHelpText>
        <label>Office / Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Staff_Office__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AC - Office of the GSA Chief of Staff</fullName>
                </value>
                <value>
                    <fullName>AG - Office of the Associate Administrator</fullName>
                </value>
                <value>
                    <fullName>AKA - EEO Program Division</fullName>
                </value>
                <value>
                    <fullName>AKB - Civil Rights Programs Division</fullName>
                </value>
                <value>
                    <fullName>AKE – OCR External Programs Division</fullName>
                </value>
                <value>
                    <fullName>AKN – OCR EEO Program Division</fullName>
                </value>
                <value>
                    <fullName>AKR – OCR Regional Operations Division</fullName>
                </value>
                <value>
                    <fullName>BA - OCFO Staff Offices Financial Services</fullName>
                </value>
                <value>
                    <fullName>BB - OCFO Office of Budget</fullName>
                </value>
                <value>
                    <fullName>BC - OCFO Office of Financial Policy &amp; Operations</fullName>
                </value>
                <value>
                    <fullName>BF - OCFO Office of FAS Financial Services</fullName>
                </value>
                <value>
                    <fullName>BG - Office of Financial Management</fullName>
                </value>
                <value>
                    <fullName>BI - Office of Financial Information &amp; Data Analytics</fullName>
                </value>
                <value>
                    <fullName>B - OCFO Front Office</fullName>
                </value>
                <value>
                    <fullName>BP - OCFO Office of PBS Financial Services</fullName>
                </value>
                <value>
                    <fullName>BR - Office of Regional Financial Services</fullName>
                </value>
                <value>
                    <fullName>CA - Office of Account Management</fullName>
                </value>
                <value>
                    <fullName>CN - Office of Mgmt &amp; Performance Improvement</fullName>
                </value>
                <value>
                    <fullName>CP - Office of HR Services</fullName>
                </value>
                <value>
                    <fullName>CS - Office of Human Capital Strategy</fullName>
                </value>
                <value>
                    <fullName>CSS - Office of HR Services</fullName>
                </value>
                <value>
                    <fullName>D1A - Operations &amp; Plans Division</fullName>
                </value>
                <value>
                    <fullName>D1E - Eastern Regions Division</fullName>
                </value>
                <value>
                    <fullName>D1H - Physical Security Division</fullName>
                </value>
                <value>
                    <fullName>D1P - Policy &amp; Performance Division</fullName>
                </value>
                <value>
                    <fullName>D1R - Resilience &amp; Interagency Programs Division</fullName>
                </value>
                <value>
                    <fullName>D1W - Western Regions Division</fullName>
                </value>
                <value>
                    <fullName>DT - Strategic Programs Division</fullName>
                </value>
                <value>
                    <fullName>EC - Office of Customer Care &amp; Outreach</fullName>
                </value>
                <value>
                    <fullName>EP - Office of Policy &amp; Forecasting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMO_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field to select the PMO representative for the project.</inlineHelpText>
        <label>PMO Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (PMO Lead)</relationshipLabel>
        <relationshipName>PMO_Lead_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Tool_Link__c</fullName>
        <inlineHelpText>Use this field to list additional resources related to the project.</inlineHelpText>
        <label>Additional Project Resources</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <inlineHelpText>Use this field to enter the percent of the overall project schedule that has been completed to date.</inlineHelpText>
        <label>Total Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>